--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.9
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y libpq-dev
+
 RUN pip install gunicorn==20.1.0
 
 COPY requirements.txt .
