--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,8 @@
-FROM python:3.9-slim
+FROM python:3.9
 
 WORKDIR /app
 
 RUN pip install --upgrade pip
-
-RUN apt-get update && apt-get install -y libpq-dev
 
 RUN pip install gunicorn==20.1.0
 
