--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,13 @@ FROM python:3.9
 
 WORKDIR /app
 
-RUN pip install --upgrade pip
+RUN apt-get update && apt-get install -y libpq-dev
 
 RUN pip install gunicorn==20.1.0
 
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt --no-cache-dir -v
+RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
