--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+# .github/workflows/main.yml
 name: Main Taski workflow
 
 on:
@@ -10,17 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.9
+
+    # Чтобы запустить тесты, нужно установить зависимости
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
         pip install flake8==6.0.0 flake8-isort==6.0.0
+        pip install -r ./backend/requirements.txt 
+    # Этот шаг дополним:
     - name: Test with flake8 and django tests
+      # Команд стало больше одной; ставим символ | и пишем команды построчно
       run: |
         python -m flake8 backend/
         cd backend/
